--- a/storefront/templates/500.html
+++ b/storefront/templates/500.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Server Error | {{ business.business_name }}</title>
+    <link rel="icon" type="image/png" href="{% static 'icon.png' %}">
     <!-- Load Global Theme -->
     {% include "storefront/theme_css.html" %}
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
